agregue una clase llamada magicnumber para q ayuden a algunas cosas  como en categoria ahora que tiene un padre absoluto

--- a/WebApplication4/WebApplication4/Views/Evento/DatosGenerales.cshtml
+++ b/WebApplication4/WebApplication4/Views/Evento/DatosGenerales.cshtml
@@ -183,67 +183,5 @@
             </div>
         </div>
     </div>
+    <script type="text/javascript" src="@Url.Content("/Scripts/RegisterEvento/DatosGeneralesHelper.js")"></script>
 </div>
-
-<script>
-    function cambioDepartamento() {
-        var depId = parseInt($("#idRegion").val());
-        if (!isNaN(depId)) {
-            var ddProv = $("#idProv");
-            ddProv.empty();
-            ddProv.append($("<option></option>").val("").html("Provincia"));
-            $.ajax({
-                url: "@Url.Action("Provincia","Services")",
-                data: { depId: depId },
-                datatype: "json",
-                success: function (data) {
-                    var obj = $.parseJSON(data);
-                    $.each(obj, function (k, v) {
-                        ddProv.append($("<option></option>").val(v.IdRegion).html(v.Nombre));
-                    });
-                },
-                error: function () {
-                    alert("Error :(");
-                }
-            });
-        }
-        ddProv.empty();
-    }
-    function cambioCategoria() {
-        var catId = parseInt($("#idCategoria").val());
-        if (!isNaN(catId)) {
-            var ddProv = $("#idSubCat");
-            ddProv.empty();
-            ddProv.append($("<option></option>").val("").html("Subcategoria"));
-            $.ajax({
-                url: "@Url.Action("Subcategoria","Services")",
-                data: { catId: catId },
-                datatype: "json",
-                success: function (data) {
-                    var obj = $.parseJSON(data);
-                    $.each(obj, function (k, v) {
-                        ddProv.append($("<option></option>").val(v.IdSCategoria).html(v.Nombre));
-                    });
-                },
-                error: function () {
-                    alert("Error :(");
-                }
-            });
-        }
-        ddProv.empty();
-    }
-    function llenaOrg() {
-        var nomb = $('input[name="groupO"]:checked').val();
-        var ids = $('input[name="groupO"]:checked').attr('id');
-        $("#organizadorNombre").val(nomb);
-        $('#valOrganizador').val(ids);
-        $('#modalBuscarOrganizador').modal('hide');
-    }
-    function llenaLocal() {
-        var nomb = $('input[name="groupL"]:checked').val();
-        var idl = $('input[name="groupL"]:checked').attr('id');
-        $("#localNombre").val(nomb);
-        $('#valLocal').val(idl);
-        $('#modalBuscarLocal').modal('hide');
-    }
-</script>
