--- a/WebApplication4/WebApplication4/Views/Evento/Index.cshtml
+++ b/WebApplication4/WebApplication4/Views/Evento/Index.cshtml
@@ -31,7 +31,7 @@
     <div class="row">
         <div class="col-md-4 col-sm-12">
             <div class="form-group">
-                <a class="btn btn-primary" href="@Url.Action("Register","Evento")">Nuevo <span class="glyphicon glyphicon-plus"></span></a>
+                <a class="btn btn-primary" href="@Url.Action("DatosGenerales","Evento")">Nuevo <span class="glyphicon glyphicon-plus"></span></a>
                 <a class="btn btn-primary" href="modificar_evento.html">Modificar <span class="glyphicon glyphicon-pencil"></span></a>
                 <a class="btn btn-primary" onclick="redirigeAsiento()">Asientos <span class="glyphicon glyphicon-equalizer"></span></a>
             </div>
