--- a/WebApplication4/WebApplication4/Views/Shared/_LayoutPersonal.cshtml
+++ b/WebApplication4/WebApplication4/Views/Shared/_LayoutPersonal.cshtml
@@ -50,7 +50,7 @@
                                 Módulo de venta <span class="caret"></span>
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a href="buscar-evento(vendedor).html">Buscar eventos</a></li>
+                                <li><a href="@Url.Action("Busqueda", "Evento")">Buscar eventos</a></li>
                                 <li><a href="@Url.Action("Entrega", "Ventas")">Entregar boletos</a></li>
                                 <li><a href="@Url.Action("BuscaReserva","CuentaUsuario")">Buscar reserva</a></li>
                                 <li><a href="@Url.Action("Devolucion", "Ventas")">Devolución</a></li>
