--- a/WebApplication4/WebApplication4/Views/Evento/Tarifas.cshtml
+++ b/WebApplication4/WebApplication4/Views/Evento/Tarifas.cshtml
@@ -1,6 +1,6 @@
-﻿
+﻿@model WebApplication4.Models.ZonaEventoModel
 @{
-    
+    List<string> nombresHeaderTabla = ViewBag.NombresPV as List<string>;
 }
 
 <div class="tab-pane fade in container" id="tarifas">
