--- a/WebApplication4/WebApplication4/Views/CuentaUsuario/MisReservas.cshtml
+++ b/WebApplication4/WebApplication4/Views/CuentaUsuario/MisReservas.cshtml
@@ -67,12 +67,14 @@
                             {
                                 <tr id=@row.codVen onclick="myFunction(this)">
                                     <td>@row.codVen</td>
-                                    @{Funcion fu = db.Funcion.Find(row.codFuncion); }
+                                    @{Funcion fu = db.Funcion.Find(row.codFuncion);
+                                       }
                                     <td>@db.Eventos.Find(fu.codEvento).nombre</td>
                                     <td>@fu.fecha</td>
-                                    <td>@fu.horaIni - @fu.horaFin</td>
+                                    <td>@fu.horaIni.Value.TimeOfDay - @fu.horaFin.Value.TimeOfDay</td>
                                     <td>@row.cantEntradas</td>
                                     <td>@row.total</td>
+                                    <td><a href="@Url.Action("DeleteReserva", "CuentaUsuario", new { codE = row.codVen, codF = row.codFuncion })" class="btn btn-primary">Borrar <span class="glyphicon glyphicon-remove"></span></a></td>
                                 </tr>
                             }
                         }
