--- a/WebApplication4/WebApplication4/Views/CuentaUsuario/BuscaReserva.cshtml
+++ b/WebApplication4/WebApplication4/Views/CuentaUsuario/BuscaReserva.cshtml
@@ -1,7 +1,15 @@
-﻿
+﻿using Microsoft.AspNet.Identity;
+@using WebApplication4.Models;
+
 @{
     ViewBag.Title = "BuscaReserva";
     Layout = "~/Views/Shared/_LayoutPersonal.cshtml";
+    var db = new WebApplication4.Models.inf245netsoft();
+    List<Ventas> listaReserva = null;
+    if (Session["ReservaBusca"] != null)
+    {
+        listaReserva = (List<WebApplication4.Models.Ventas>)Session["ReservaBusca"];
+    }
 }
 
 <div class="container-fluid">
@@ -48,7 +56,41 @@
 
     <div class="row">
         <h4>Resultados:</h4><br>
-        <table class="table table-bordered table-hover">
+        <div class="row">
+            <table id="mytable" class="table table-bordered table-hover">
+                <thead>
+                    <tr class="thead">
+                        <th>Código Reserva</th>
+                        <th>Nombre</th>
+                        <th>N° Doc</th>
+                        <th>Evento</th>
+                        <th>Cantidad Entradas</th>
+                        @*<th>Monto</th>*@
+                        @*<th>Moneda</th>*@
+                    </tr>
+                </thead>
+                <tbody id="tbody">
+                    @if (listaReserva!= null)
+                    {
+                        foreach (var row in listaReserva)
+                        {
+                            <tr id=@row.codVen onclick="myFunction(this)">
+                                <td>@row.codVen</td>
+                                <td>@db.CuentaUsuario.Find(row.cliente).nombre</td>
+                                <td>@row.codDoc</td>
+                                @*@{Funcion fu = db.Funcion.Find(row.codFuncion);
+                                }
+                                <td>@db.Eventos.Find(fu.codEvento).nombre</td>
+                                <td>@fu.horaIni.Value.TimeOfDay - @fu.horaFin.Value.TimeOfDay</td>
+                                <td>@row.cantAsientos</td>*@
+                            </tr>
+                        }
+                    }
+                </tbody>
+            </table>
+        </div>
+
+        @*<table class="table table-bordered table-hover">
             <tr class="active">
                 <th>Código Reserva</th>
                 <th>Nombre</th>
@@ -85,7 +127,8 @@
                 <td>60.00</td>
                 <td>Soles</td>
             </tr>
-        </table>
+        </table>*@
+
     </div><br>
 
 
