--- a/WebApplication4/WebApplication4/Views/Evento/Tarifas.cshtml
+++ b/WebApplication4/WebApplication4/Views/Evento/Tarifas.cshtml
@@ -9,7 +9,7 @@
         <div class="row">
             <div class="col-md-3 col-md-offset-9">
                 <button class="btn btn-primary" onclick="agregaFila()">Agregar fila <span class="glyphicon glyphicon-plus"></span></button>
-                <button class="btn btn-primary">Quitar fila <span class="glyphicon glyphicon-remove"></span></button>
+                <button class="btn btn-primary" onclick="quitarFila()">Quitar fila <span class="glyphicon glyphicon-remove"></span></button>
             </div>
 
         </div><br>
@@ -28,11 +28,12 @@
                                 <th>@nombresHeaderTabla[i]</th>
                             }
                             <th>Cantidad de entradas</th>
+                            <th>¿Quitar?</th>
                         </tr>
                     </thead>
                     <tbody></tbody>
                 </table>
-                <button type="submit" class="btn btn-primary" style="float: right;">Siguiente   <span class="glyphicon glyphicon-arrow-right"></span></button>
+                <button type="submit" class="btn btn-primary" style="float: right;" onclick="agregaTarifas()">Siguiente   <span class="glyphicon glyphicon-arrow-right"></span></button>
             }
         </div>
     </div>
@@ -43,15 +44,45 @@
         var table = document.getElementById("tarifario");
         var row = table.insertRow();
         row.setAttribute("contentEditable", "true");
+        row.id = nZonas;
         var nCeldas = parseInt($('#nHeaders').val());
         for (var i = 0; i < nCeldas; i++) {
             var cell = row.insertCell(i);
-            cell.setAttribute("draggable", "flase");
+            cell.setAttribute("draggable", "false");
             if (i == 0) {
                 cell.setAttribute("contentEditable", "false");
                 cell.innerHTML = (nZonas + 1);
             }
         }
+        var cell = row.insertCell();
+        cell.innerHTML = '<input type="radio" name="groupTarifas" value="' + (parseInt(row.id)) + '">';
+        cell.setAttribute("contentEditable", "false");
+        cell.align = "center";
+
         $('#nZonas').val((nZonas + 1));
+    }
+    function quitarFila() {
+        var fila = $('input[name="groupTarifas"]:checked').val();
+        var row = document.getElementById(parseInt(fila));
+        row.parentNode.removeChild(row);
+        var cantidad = parseInt($('#nZonas').val());
+        $("#nZonas").val(cantidad - 1);
+    }
+    function agregaTarifas() {
+        return false;
+        var nCeldas = parseInt($('#nHeaders').val());
+        var nombreLista = "ListaZEM";
+        var nombreSubLista = "ListaTarifas";
+        var tableBTV = document.getElementById("tarifario");
+        for (var i = 1, row; row = tableBTV.rows[i]; i++) {
+            var nombreZona = row.cells[1].innerText;
+            var aforo = row.cells[nCeldas-1].innerText;
+            $("#formPost").prepend("<input type='hidden' name='" + nombreLista + "[" + (i - 1) + "].Nombre' value='" + nombreZona + "'>");
+            $("#formPost").prepend("<input type='hidden' name='" + nombreLista + "[" + (i - 1) + "].Aforo' value='" + aforo + "'>");
+            for (var j = 2; j < nCeldas -1; j++) {
+                var precio = row.cells[j].innerHTML;
+                $("#formPost").prepend("<input type='hidden' name='" + nombreLista + "[" + (i - 1) + "]." + nombreSubLista + "[" + (j - 2) + "].Precio' value='" + precio + "'>");
+            }
+        }
     }
 </script>
