--- a/WebApplication4/WebApplication4/Views/CuentaUsuario/MisCompras.cshtml
+++ b/WebApplication4/WebApplication4/Views/CuentaUsuario/MisCompras.cshtml
@@ -5,6 +5,24 @@
     ViewBag.Title = "MisCompras";
     Layout = "~/Views/Shared/_Layout.cshtml";
     var db = new WebApplication4.Models.inf245netsoft();
+    CuentaUsuario cu = null;
+    cu = (CuentaUsuario)Session["UsuarioLogueado"];
+    DateTime hoy = DateTime.Now;
+    List<Ventas> listaventas = null;
+    List<VentasXFuncion> listvxf = new List<VentasXFuncion>();
+    if (cu != null)
+    {
+        listaventas = db.Ventas.Where(r => r.Estado == "Pagado" && r.cliente == cu.usuario).ToList();
+        for (int i = 0; i < listaventas.Count; i++)
+        {
+            Ventas vent = listaventas[i];
+            List<VentasXFuncion> lv = db.VentasXFuncion.Where(c => c.codVen == vent.codVen).ToList();
+            for (int j = 0; j < lv.Count; j++)
+            {
+                listvxf.Add(lv[j]);
+            }
+        }
+    }
 
 }
 
@@ -26,71 +44,38 @@
             </div>
 
             <div class="row">
-                <div class="table-responsive">
-                    <table class="table table-bordered table-hover">
-                        <tr class="active">
-                            <th>Cód. reserva</th>
+                <table id="mytable" class="table table-bordered table-hover">
+                    <thead>
+                        <tr class="thead">
+                            <th>Codigo</th>
                             <th>Evento</th>
                             <th>Fecha</th>
                             <th>Hora</th>
-                            <th>Cantidad Boletos</th>
+                            <th>Cantidad de Boletos</th>
                             <th>Monto (S/.)</th>
-                            <th>Eliminar</th>
-
                         </tr>
-                        <tr>
-                            <td>105060</td>
-                            <td><a href="ver_evento.html">Circo de Kiko</a></td>
-                            <td>04/12/2015</td>
-                            <td>14:00</td>
-                            <td>4</td>
-                            <td>180.00</td>
-                            <td>
-                                <center>
-                                    <button type="button" class="btn btn-primary btn-sm">
-                                        Eliminar
-                                        <span class="glyphicon glyphicon-trash"></span>
-                                    </button>
-                                </center>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>102040</td>
-                            <td><a href="ver_evento.html">La Tarumba</a></td>
-                            <td>12/12/2015</td>
-                            <td>12:22</td>
-                            <td>2</td>
-                            <td>45.50</td>
-                            <td>
-                                <center>
-                                    <button type="button" class="btn btn-primary btn-sm">
-                                        Eliminar
-                                        <span class="glyphicon glyphicon-trash"></span>
-                                    </button>
-                                </center>
-                            </td>
-                        </tr>
-                        <tr id="fila3" onclick="select()">
-                            <td>105060</td>
-                            <td><a href="ver_evento.html">Circo de Kiko</a></td>
-                            <td>04/12/2015</td>
-                            <td>14:00</td>
-                            <td>4</td>
-                            <td>180.00</td>
-                            <td>
-                                <center>
-                                    <button type="button" class="btn btn-primary btn-sm">
-                                        Eliminar
-                                        <span class="glyphicon glyphicon-trash"></span>
-                                    </button>
-                                </center>
-                            </td>
-
-                        </tr>
-
-                    </table>
-                </div>
-
+                    </thead>
+                    <tbody id="tbody">
+                        @if (listaventas != null)
+                        {
+                            if (listvxf != null) { 
+                            foreach (var row in listvxf)
+                            {
+                                <tr id=@row.codVen onclick="myFunction(this)">
+                                    <td>@row.codVen</td>
+                                    @{Funcion fu = db.Funcion.Find(row.codFuncion);
+                                    }
+                                    <td>@db.Eventos.Find(fu.codEvento).nombre</td>
+                                    <td>@fu.fecha.Value.ToString("dd/MM/yyyy")</td>
+                                    <td>@fu.horaIni.Value.TimeOfDay - @fu.horaFin.Value.TimeOfDay</td>
+                                    <td>@row.cantEntradas</td>
+                                    <td>@row.total</td>
+                                </tr>
+                            }
+                            }
+                        }
+                    </tbody>
+                </table>
             </div>
 
             <br>
