--- a/WebApplication4/WebApplication4/Views/CuentaUsuario/Asignacion.cshtml
+++ b/WebApplication4/WebApplication4/Views/CuentaUsuario/Asignacion.cshtml
@@ -35,16 +35,16 @@
 <div class="container">
     <div class="row">
         <div class="col-md-3">
-            <a class="btn btn-primary" href="#nuevaPromocion" data-toggle="modal">Agregar <span class="glyphicon glyphicon-plus"></span></a>
-            <a class="btn btn-primary" href="">Borrar <span class="glyphicon glyphicon-remove"></span></a>
+            <a class="btn btn-primary" href="" data-toggle="modal">Agregar <span class="glyphicon glyphicon-plus"></span></a>
+            <a class="btn btn-primary" onclick="borrarT()" href="">Borrar <span class="glyphicon glyphicon-remove"></span></a>
         </div>
 
-        <div class="col-md-2">
+        @*<div class="col-md-2">
             <button tyle="button" class="btn btn-primary" data-dismiss="modal" aria-hidden="true">Guardar <span class="glyphicon glyphicon-save"></span> </button>
-        </div>
+        </div>*@
 
         <div>
-            <a href="index2.html" class="btn btn-danger pull-right" data-dismiss="modal" aria-hidden="true">Salir <span class="glyphicon glyphicon-log-out"></span> </a><br>
+            <a href="@Url.Action("Index2", "Home")" class="btn btn-danger pull-right" data-dismiss="modal" aria-hidden="true">Salir <span class="glyphicon glyphicon-log-out"></span> </a><br>
         </div>
 
     </div><br>
@@ -118,6 +118,7 @@
         <table id="mytable" class="table table-bordered table-hover">
             <thead>
                 <tr class="thead">
+                    <th>Codigo de Punto</th>
                     <th>Punto de Venta</th>
                     <th>Fecha</th>
                     <th>Hora Inicio</th>
@@ -130,8 +131,9 @@
                 foreach (var row in listaTurnoAsig)
                 {
                     <tr id=@row.usuario onclick="myFunction(this)">
+                        <td>@db.PuntoVenta.Find(@row.codPuntoVenta).codPuntoVenta</td>
                         <td>@db.PuntoVenta.Find(@row.codPuntoVenta).ubicacion</td>
-                        <td>@row.fecha</td>
+                        <td>@row.fecha.ToString("dd/MM/yyyy")</td>
                         <td>@row.TurnoSistema.horIni</td>
                         <td>@row.TurnoSistema.horFin</td>
                     </tr>
@@ -166,7 +168,7 @@
                             <tbody>
                                 @foreach (var vend in vendList)
                                 {
-                                    <tr>
+                                    <tr id=@vend.usuario.Replace("@", "°") onclick="myFunction(this)">
                                         <td>@vend.usuario.Replace("@", "°")</td>
                                         <td>@vend.nombre</td>
                                         <td><input type="radio" name="groupO" value="@vend.usuario.Replace("@", "°")"></td>
@@ -185,7 +187,10 @@
     </div>
 </div>
 
+<input type="hidden" id="idTurnoT" value="" />
 <input type="hidden" id="idVendT" value="" />
+<input type="hidden" id="fechaT" value="" />
+<input type="hidden" id="horaiT" value="" />
 
 <script>
     function llenaVend() {
@@ -211,16 +216,50 @@
             evento = "";
         }
     }
-
+    function borrarT() {
+        var turno = $('#idTurnoT').val();
+        var fecha = $('#fechaT').val();
+        var horai = $('#horaiT').val();
+        var el = document.getElementById(turno);
+        var row = $(el).closest('tr');
+        //alert(turno);
+        //alert(fecha);
+        //alert(horai);
+        //alert(promocion);
+        if (turno != "" && turno != null && fecha!="" && fecha !=null && horai!=null && horai!="") {
+            $.ajax({
+                url: "@Url.Action("DeleteTurno","CuentaUsuario")",
+                data: { turno: turno,fecha:fecha,horai:horai},
+            success: function (data) {
+                //alert("Desactivado");
+                //window.location.href = '/CuentaUsuario/Asignacion';
+                //window.location.href = 'Promocion/Index?evento='+evento;
+                //row.remove();
+            },
+            error: function () {
+                alert("Error :(");
+                //row.remove();
+            }
+        });
+    } else {
+            alert("Seleccione un turno");
+            turno = "";
+    }
+    }
     function myFunction(x) {
         if (document.getElementsByClassName("trselected").length > 0) {
             var element = document.getElementsByClassName("trselected");
             element[0].className = "";
         }
-        var elem = document.getElementById("idVendT");
+        var elem = document.getElementById("idTurnoT");
+        var elem1 = document.getElementById("fechaT");
+        var elem2 = document.getElementById("horaiT");
         elem.value = x.cells[0].innerHTML;
+        elem1.value = x.cells[2].innerHTML;
+        elem2.value = x.cells[3].innerHTML;
         x.className = "trselected";
     }
+
     function registrar() {
         var monto = $('#monto2').val();
         var pend = $('#pendiente').val();
