--- a/WebApplication4/WebApplication4/Views/CuentaUsuario/Asignacion.cshtml
+++ b/WebApplication4/WebApplication4/Views/CuentaUsuario/Asignacion.cshtml
@@ -35,7 +35,7 @@
 <div class="container">
     <div class="row">
         <div class="col-md-3">
-            <a class="btn btn-primary" href="" data-toggle="modal">Agregar <span class="glyphicon glyphicon-plus"></span></a>
+            <a class="btn btn-primary" onclick="registrar()" href="" data-toggle="modal">Agregar <span class="glyphicon glyphicon-plus"></span></a>
             <a class="btn btn-primary" onclick="borrarT()" href="">Borrar <span class="glyphicon glyphicon-remove"></span></a>
         </div>
 
@@ -67,13 +67,13 @@
         <div class="col-md-3">
             <div class="input-group">
                 <span class="input-group-addon">Desde:</span>
-                <input type="date" class="form-control">
+                <input id="fini" type="date" class="form-control">
             </div>
         </div>
         <div class="col-md-3">
             <div class="input-group">
                 <span class="input-group-addon">Hasta:</span>
-                <input type="date" class="form-control">
+                <input id="ffin" type="date" class="form-control">
             </div>
         </div>
     </div>
@@ -261,24 +261,34 @@
     }
 
     function registrar() {
-        var monto = $('#monto2').val();
-        var pend = $('#pendiente').val();
-        if (monto != "" && monto != null && pend != "" && pend != null) {
+        var turno = parseInt($("#comboBusq").val());
+        var punto = parseInt($("#comboPunto").val());
+        var idV = $('#idVend').val();
+        var ini = $('#fini').val();
+        var fin = $('#ffin').val();
+        //if (isNaN(punto)) return;
+        //alert(isNaN(punto));
+        //alert(idV);
+        //alert(ini);
+        //alert(fin);
+        //alert(punto);
+        //alert(turno);
+        if (turno != "0" && isNaN(punto)==false && idV != null && ini != "" && fin != "") {
             //alert(monto);
             $.ajax({
-                url: "@Url.Action("RegistrarPagos","Ventas")",
-                data: { monto: monto },
+                url: "@Url.Action("RegistrarAsignacion","CuentaUsuario")",
+                data: { turno:turno,punto:punto,idV:idV,ini:ini,fin:fin },
                 success: function (data) {
                     //alert("Eliminado");
-                    window.location.href = '/Ventas/Pago';
+                    window.location.href = '/CuentaUsuario/Asignacion';
                 },
                 error: function () {
                     //alert("Error :(");
-                    window.location.href = '/Ventas/Pago';
+                    window.location.href = '/CuentaUsuario/Asignacion';
                 }
             });
         } else {
-            alert("Seleccione un organizador e ingrese un monto");
+            alert("Seleccione un vendedor e ingrese los datos del turno a asignar");
         }
     }
 
