--- a/WebApplication4/WebApplication4/Views/Local/Edit.cshtml
+++ b/WebApplication4/WebApplication4/Views/Local/Edit.cshtml
@@ -10,15 +10,15 @@
 @{
     var db = new WebApplication4.Models.inf245netsoft();
     Local local = (Local)Session["local"];
-    LocalModel localM = new LocalModel();
+    LocalEditModel localM = new LocalEditModel();
     localM.aforo = (int)local.aforo;
-    localM.departamento = (int)local.idRegion;
+    localM.idRegion = (int)local.idRegion;
     localM.descripcion = local.descripcion;
-    localM.provincia = (int)local.idProvincia;
+    localM.idProv = (int)local.idProvincia;
     localM.ubicacion = local.ubicacion;
 }
 
-@model LocalModel
+@model LocalEditModel
 @using (Html.BeginForm("EditRegister", "Local", FormMethod.Post, new {model=localM }))
 {
     @Html.AntiForgeryToken()
@@ -29,7 +29,7 @@
         <div class="row form-group">
             @Html.LabelFor(model => model.aforo, new { @class = "control-label col-md-3" })
             <div class="col-md-9">
-                @Html.TextBoxFor(model => model.aforo, new { @placeholder = @localM.aforo })
+                @Html.TextBoxFor(model => model.aforo, new { @placeholder = @localM.aforo, @Value = @localM.aforo })
                 @Html.ValidationMessageFor(model => model.aforo)
             </div>
         </div>
@@ -37,58 +37,33 @@
         <div class="row form-group">
             @Html.LabelFor(model => model.descripcion, new { @class = "control-label col-md-3" })
             <div class="col-md-9">
-                @Html.TextAreaFor(model => model.descripcion, new { @placeholder = @localM.descripcion })
-                @Html.ValidationMessageFor(model => model.descripcion)
+                @Html.TextAreaFor(model => model.descripcion, new { @placeholder = @localM.descripcion, @Value = @localM.descripcion })
+                @*@Html.ValidationMessageFor(model => model.descripcion)*@
             </div>
         </div>
         <br>
         <div class="row form-group">
             @Html.LabelFor(model => model.ubicacion, new { @class = "control-label col-md-3" })
             <div class="col-md-9">
-                @Html.TextBoxFor(model => model.ubicacion, new { @placeholder = @localM.ubicacion })
-                @Html.ValidationMessageFor(model => model.ubicacion)
+                @Html.TextBoxFor(model => model.ubicacion, new { @placeholder = @localM.ubicacion, @Value = @localM.ubicacion })
+                @*@Html.ValidationMessageFor(model => model.ubicacion)*@
             </div>
         </div>
 
         <div class="row form-group">
-            @Html.LabelFor(model => model.departamento, new { @class = "control-label col-md-3" })
-            <div class="col-md-9">
-                @{
-    List<WebApplication4.Models.Region> listaDepartamento = db.Region.AsNoTracking().Where(c => c.idRegPadre == null).ToList();
-    IEnumerable<SelectListItem> listItems = (from a in listaDepartamento
-                                             select new SelectListItem
-                                           {
-                                               Value = a.idRegion.ToString(),
-                                               Text = a.nombre,
-                                               Selected = false
-                                           });
-                }
-                @{
-                     listItems.First().Selected=true;
-                }
-                @Html.DropDownListFor(model => model.departamento, listItems, "Seleccione Departamento")
+            @Html.LabelFor(model => model.idRegion, new { @class = "control-label col-md-3" })
+            <div class="col-md-2">
+                @Html.DropDownListFor(model => model.idRegion, @ViewBag.DepID as SelectList, "Departamento", new { @class = "form-control", @onchange = "cambioDepartamento()" })
             </div>
         </div>
 
         <div class="row form-group">
-            @Html.LabelFor(model => model.provincia, new { @class = "control-label col-md-3" })
-            <div class="col-md-9">
-                @{
-    List<WebApplication4.Models.Region> listaProvincia = db.Region.AsNoTracking().Where(c => c.idRegPadre != null).ToList();
-    IEnumerable<SelectListItem> listItems2 = (from a in listaProvincia
-                                              select new SelectListItem
-                                            {
-                                                Value = a.idRegion.ToString(),
-                                                Text = a.nombre,
-                                                Selected = false
-                                            });
-                }
-                @{
-                     listItems2.First().Selected = true;
-                }
-                @Html.DropDownListFor(model => model.provincia, listItems2, "Seleccione Provincia")
+            @Html.LabelFor(model => model.idProv, new { @class = "control-label col-md-3" })
+            <div class="col-md-2">
+                @Html.DropDownListFor(model => model.idProv, @ViewBag.ProvID as SelectList, "Provincia", new { @class = "form-control" })
             </div>
         </div>
+               
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
@@ -98,3 +73,28 @@
     </div>
 }
 
+<script>
+    function cambioDepartamento() {
+        var depId = parseInt($("#idRegion").val());
+        if (!isNaN(depId)) {
+            var ddProv = $("#idProv");
+            ddProv.empty();
+            ddProv.append($("<option></option>").val("").html("Provincia"));
+            $.ajax({
+                url: "@Url.Action("Provincia","Services")",
+                data: { depId: depId },
+            datatype: "json",
+            success: function (data) {
+                var obj = $.parseJSON(data);
+                $.each(obj, function (k, v) {
+                    ddProv.append($("<option></option>").val(v.IdRegion).html(v.Nombre));
+                });
+            },
+            error: function () {
+                alert("Error :(");
+            }
+        });
+    }
+    ddProv.empty();
+    }
+</script>
